package creature;

//葫芦娃类
public class CalabashBrother extends Creature{
    public CalabashBrother(){
        super(false);
    }
}
